# foundation_stereo_ros

./: CMakeLists.txt  K.txt  README.md  build_trt_from_weights.py  package.xml
config/: stereo_depth.params.yaml
core/: foundation_stereo.py
launch/: stereo_depth.launch.py
models/torch/20-26-39/: model_best_bp2_serialize.pth
models/torch/20-30-48/: cfg.yaml  model_best_bp2_serialize.pth
models/torch/23-36-37/: model_best_bp2_serialize.pth
models/trt/20-26-39_iter4/: feature_runner.engine  post_runner.engine
models/trt/20-26-39_iter8/: post_runner.onnx
models/trt/20-30-48_iter4/: feature_runner.engine  onnx.yaml  post_runner.onnx
models/trt/20-30-48_iter8/: feature_runner.engine  post_runner.engine  post_runner.onnx
models/trt/23-36-37_iter4/: feature_runner.engine  feature_runner.onnx
models/trt/23-36-37_iter8/: feature_runner.engine  onnx.yaml  post_runner.engine
models/trt/onnx_20-26-39_iter4/: feature_runner.onnx  post_runner.onnx
models/trt/onnx_20-26-39_iter8/: feature_runner.engine  post_runner.engine
models/trt/onnx_20-30-48_iter4/: post_runner.engine
models/trt/onnx_20-30-48_iter8/: feature_runner.onnx  onnx.yaml
models/trt/onnx_23-36-37_iter4/: onnx.yaml  post_runner.engine  post_runner.onnx
models/trt/onnx_23-36-37_iter8/: post_runner.onnx
onnx_23-36-37_iter8/: onnx.yaml
scripts/: run_demo_original.py  stereo_depth_node.py
